2000-01-24  Ettore Perazzoli  <ettore@helixcode.com>

	* htmltextmaster.c (select_range): Fixed range comparisons.  I
	think I need to sleep.

	* htmldrawqueue.c (draw_obj): Do not paint the cursor if the
	engine is not editable.
	(html_draw_queue_flush): Removed debugging message.

	* htmlengine.c (html_engine_flush_draw_queue): Only draw the
	cursor if the engine is not editable.
	(html_engine_draw): Do not draw the cursor if not editable.
	(html_engine_draw_cursor_in_area): g_assert() that the widget is
	editable.

	* gtkhtml.c (selection_idle_handler): New function, to perform
	selection in the idle loop.
	(motion_notify_event): Set it up in the idle handler to perform
	selection.
	(destroy): Remove the selection idle, if any.
	(init): Initialize `selection_idle_handler_id' to zero.
	(gtk_html_end): Removed debugging message.

	* gtkhtml.h: New member `selection_idle_handler_id' in `GtkHTML'.

2000-01-23  Federico Mena Quintero  <federico@helixcode.com>

	* gtkhtml.c (realize): Set the background pixmap to NONE so that
	it does not flicker as much when scrolling.

2000-01-23  Ettore Perazzoli  <ettore@helixcode.com>

	* htmltextmaster.c (check_point): Fix selection for slaves after
	the first one.

	* htmlobject.c (check_point): Fix braino: `for_cursor' is a
	`gboolean', not a `gpointer'.

	* htmltextmaster.c (split): Set the selection on the new element
	by hand instead of calling `html_object_select_range()'.

	* gtkhtml.c (motion_notify_event): Call
	`html_engine_select_region' with `TRUE' as the `queue_draw'
	parameter.

	* htmlengine.c (html_engine_select_region): New param
	`queue_draw'.  When not FALSE, put all the objects that change
	selection state on the draw queue.
	(select_region_forall): Updated to do this.
	(html_engine_unselect_all): New param `queue_draw', honoured by
	using `SelectRegionData'.
	(unselect_forall): Updated accordingly.

	* htmlobject.h (select_range): Updated with the `engine' and
	`queue_draw' params.