@@ -51,7 +51,6 @@ struct _GtkHTML {
 	GdkCursor *arrow_cursor;
 
 	gint selection_x1, selection_y1;
-	gint selection_x2, selection_y2;
 
 	gboolean in_selection : 1;
 	gboolean button_pressed : 1;
@@ -60,7 +59,6 @@ struct _GtkHTML {
 	guint vadj_connection;
 
 	guint idle_handler_id;
-	guint selection_idle_handler_id;
 };
 
 struct _GtkHTMLClass {
